--- a/projects/ng-eventstore-listing-showcase/src/app/app.component.html
+++ b/projects/ng-eventstore-listing-showcase/src/app/app.component.html
@@ -4,7 +4,9 @@
     [idPropertyName]="idPropertyName"
     [inputDataList]="currentData"
     [itemComponentClass]="rowComponentClass"
-    [subscriptionTopicConfigurations]="subscriptionTopicConfigurations">
+    [subscriptionTopicConfigurations]="subscriptionTopicConfigurations"
+    [socketUrl]="socketUrl"
+    [playbackFiles]="playbackFiles">
   </lib-ng-eventstore-listing>
   <lib-ng-header-footer-template-holder [componentClass]="footerComponentClass"[actualItemCount]="actualItemCount" [itemsPerPage]="itemsPerPage" [pageIndex]="pageIndex" [totalItemCount]="totalFilteredItems" (pageChangedEmitter)="onPageUpdate($event)"></lib-ng-header-footer-template-holder>
 </div>
