--- a/projects/ng-eventstore-listing-showcase/src/styles.css
+++ b/projects/ng-eventstore-listing-showcase/src/styles.css
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/css?family=Archivo:400,500,600,700|Roboto:300,400,500,700|Anton");
+
+* {
+    font-size: 12px;
+    font-family: Archivo !important;
+    font-weight: 500;
+}
