--- a/projects/ng-eventstore-listing/src/lib/ng-eventstore-listing.component.html
+++ b/projects/ng-eventstore-listing/src/lib/ng-eventstore-listing.component.html
@@ -13,7 +13,8 @@
     </div>
   </div>
 </div> -->
-<div [class]="'row ' + (listHeaderGroups && listHeaderGroups.generalRowClassName) ? listHeaderGroups.generalRowClassName : ''" *ngFor="let item of dataList; trackBy: trackByFn">
+<!-- <div [class]="'row ' + (listHeaderGroups && listHeaderGroups.generalRowClassName) ? listHeaderGroups.generalRowClassName : ''" *ngFor="let item of dataList; trackBy: trackByFn"> -->
+<div class="row" *ngFor="let item of dataList; trackBy: trackByFn">
   <div class="col-12">
     <lib-item-template-holder
       [data]="item"
