--- a/lib/ng-eventstore-listing.component.html
+++ b/lib/ng-eventstore-listing.component.html
@@ -14,16 +14,30 @@
   </div>
 </div> -->
 <!-- <div [class]="'row ' + (listHeaderGroups && listHeaderGroups.generalRowClassName) ? listHeaderGroups.generalRowClassName : ''" *ngFor="let item of dataList; trackBy: trackByFn"> -->
-<div class="row" *ngFor="let item of dataList; trackBy: trackByFn">
+<ng-template *ngIf="(dataList && dataList.size > 0)">
+  <div class="row" *ngFor="let item of dataList; trackBy: trackByFn">
+    <div class="col-12">
+      <lib-item-template-holder
+        [data]="item"
+        [itemComponentClass]="itemComponentClass"
+        [lookups]="lookups"
+        (updateEmitter)="onUpdate($event)"
+        (updateLookupsEmitter)="onUpdateLookups($event)"
+        (showModalEmitter)="onShowModal($event)"
+        (deleteEmitter)="onDelete($event)">
+      </lib-item-template-holder>
+    </div>
+  </div>
+</ng-template>
+
+<div class="row" *ngIf="(!dataList || dataList.size === 0)">
   <div class="col-12">
-    <lib-item-template-holder
-      [data]="item"
-      [itemComponentClass]="itemComponentClass"
-      [lookups]="lookups"
-      (updateEmitter)="onUpdate($event)"
-      (updateLookupsEmitter)="onUpdateLookups($event)"
-      (showModalEmitter)="onShowModal($event)"
-      (deleteEmitter)="onDelete($event)">
-    </lib-item-template-holder>
+    <div class="row">
+      <div class="col-12 no-results-container">
+        <div class="text-center text-secondary">
+          <span class="italic">{{ emptyListDisplayText }}</span>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
