Fixed no results display

--- a/lib/ng-eventstore-listing.component.html
+++ b/lib/ng-eventstore-listing.component.html
@@ -14,7 +14,7 @@
   </div>
 </div> -->
 <!-- <div [class]="'row ' + (listHeaderGroups && listHeaderGroups.generalRowClassName) ? listHeaderGroups.generalRowClassName : ''" *ngFor="let item of dataList; trackBy: trackByFn"> -->
-<ng-template *ngIf="(dataList && dataList.size > 0)">
+<!-- <ng-template *ngIf="dataCount && dataCount > 0"> -->
   <div class="row" *ngFor="let item of dataList; trackBy: trackByFn">
     <div class="col-12">
       <lib-item-template-holder
@@ -28,9 +28,9 @@
       </lib-item-template-holder>
     </div>
   </div>
-</ng-template>
+<!-- </ng-template> -->
 
-<div class="row" *ngIf="(!dataList || dataList.size === 0)">
+<div class="row" *ngIf="!dataCount || dataCount === 0">
   <div class="col-12">
     <div class="row">
       <div class="col-12 no-results-container">
