--- a/lib/ng-eventstore-listing.component.html
+++ b/lib/ng-eventstore-listing.component.html
@@ -21,7 +21,7 @@
       [itemComponentClass]="itemComponentClass"
       [lookups]="lookups"
       (updateEmitter)="_onUpdate($event)"
-      (updateLookupsEmitter)="_onUpdateLookups($event)"
+      (getLookupsEmitter)="_onGetLookups($event)"
       (showModalEmitter)="_onShowModal($event)"
       (deleteEmitter)="_onDelete($event)">
     </lib-item-template-holder>
