--- a/integration/app/test-row/test-row.component.html
+++ b/integration/app/test-row/test-row.component.html
@@ -237,7 +237,7 @@
             <button class="btn btn-default btn-block">Adjust Price</button>
           </div>
           <div class="col-6 pl-1">
-            <button class="btn btn-default btn-block">History</button>
+            <button class="btn btn-default btn-block" (click)="testGetLookups()">History</button>
           </div>
         </div>
       </div>
