Added overlay loading support

--- a/lib/ng-eventstore-listing.component.html
+++ b/lib/ng-eventstore-listing.component.html
@@ -39,3 +39,11 @@
     </div>
   </div>
 </div>
+
+<div id="overlay" class="overlay">
+  <div id="overlay-subject">
+      <div class="cssload-container">
+        <div class="cssload-speeding-wheel"></div>
+      </div>
+  </div>
+</div>
