Fixed encoding of url

--- a/integration/app/app.component.html
+++ b/integration/app/app.component.html
@@ -7,7 +7,7 @@
   <label for="dealership-filter">Seller Dealership: </label>
   <select [formControl]="dealershipFilterFormControl" id="dealership-filter">
     <option value="dealership-1-'s">Glendale Toyota</option>
-    <option value="dealership-2">Honda of Vacaville</option>
+    <option value="dealership-2-&">Honda of Vacaville</option>
     <option value="dealership-3">Airport Marina Ford</option>
     <!-- <option [value]="dealership-4">Dealership 4</option>
     <option [value]="dealership-5">Dealership 5</option> -->
