Fixed loading UI

--- a/lib/ng-eventstore-listing.component.html
+++ b/lib/ng-eventstore-listing.component.html
@@ -42,8 +42,8 @@
 
 <div [id]="'ng-eventstore-listing-overlay-' + _id" class="ng-eventstore-listing-overlay">
   <div [id]="'ng-eventstore-listing-overlay-subject-' + _id" class="ng-eventstore-listing-overlay-subject">
-      <div class="cssload-container">
-        <div class="cssload-speeding-wheel"></div>
+      <div class="ng-eventstore-listing-cssload-container">
+        <div class="ng-eventstore-listing-cssload-speeding-wheel"></div>
       </div>
   </div>
 </div>
