--- a/lib/ng-eventstore-listing.component.css
+++ b/lib/ng-eventstore-listing.component.css
@@ -23,9 +23,9 @@
   text-align: center;
 }
 
-.cssload-container
+.ng-eventstore-listing-cssload-container
 { width: 100%; height: 49px; text-align: center; }
-.cssload-speeding-wheel
+.ng-eventstore-listing-cssload-speeding-wheel
 { width: 49px; height: 49px; margin: 0 auto; border: 3px solid rgb(59,53,110); border-radius: 50%; border-left-color: transparent; border-right-color: transparent; animation: cssload-spin 475ms infinite linear; -o-animation: cssload-spin 475ms infinite linear; -ms-animation: cssload-spin 475ms infinite linear; -webkit-animation: cssload-spin 475ms infinite linear; -moz-animation: cssload-spin 475ms infinite linear; }
 @keyframes cssload-spin {
 100%
