--- a/lib/ng-eventstore-listing.component.html
+++ b/lib/ng-eventstore-listing.component.html
@@ -28,7 +28,7 @@
   </div>
 </div>
 
-<div class="row" *ngIf="!_dataCount || _dataCount === 0">
+<div class="row" *ngIf="!_dataCount || _dataCount === 0 && !_isLoading">
   <div class="col-12">
     <div class="row">
       <div class="col-12 no-results-container">
