Added configurable height of loading offset

--- a/integration/app/app.component.html
+++ b/integration/app/app.component.html
@@ -42,7 +42,8 @@
       [pageIndex]="pageIndex"
       [itemsPerPage]="itemsPerPage"
       [filters]="filters"
-      [sort]="sort">
+      [sort]="sort"
+      loadingOffset="300px">
     </lib-ng-eventstore-listing>
   </div>
 
